temporary fix for body padding issue with scrollbar and dropdown component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+body {
+  padding-right: 0px !important;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
